--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^20.11.28",
     "@types/ws": "^8.5.10",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   }
 }
